--- a/src/Api/appsettings.Development.json
+++ b/src/Api/appsettings.Development.json
@@ -4,5 +4,15 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=dev.db"
+  },
+  "JwtSettings": {
+    "SecretKey": "your-256-bit-secret-key-your-256-bit-secret-key",
+    "Issuer": "https://auth.margo.com",
+    "Audience": "https://api.margo.com",
+    "ExpiryInMinutes": 60
   }
 }
