add authorization for some endpoint

--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=dev.db"
+    "DefaultConnection": "Data Source=margo.db"
   }
 }
